stateful_app/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    tier: backend
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: yassiin/backend-img:latest
        ports:
        - containerPort: 8080
